# OpenGLTest

./: .gitignore  CMakeLists.txt  OpenGLTest.sln  README.md  vcpkg.json
OpenGLTest/: Camera.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLTest.cpp  OpenGLTest.h  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  Shader.cpp  Shader.h  packages.config
OpenGLTest/include/glad/: glad.h
OpenGLTest/res/shaders/: shader.fs  shader.vs
include/: Camera.h  Shader.h
res/models/monkey/: monkey.mtl
res/shaders/: shader.fs
src/: Mesh.cpp  Model.cpp  OpenGLTest.cpp  glad.c
